--- a/index.html
+++ b/index.html
@@ -120,6 +120,19 @@
     <div class="chatbox" id="chatbox">
       <div class="message">👋 স্বাগত! কিছু জিজ্ঞাসা করুন।</div>
     </div>
+    <div class="animated-text">
+    Md. Monjurul Haque, Lecturer of Economics,<br>Jiauddin School And College
+  </div>
+  <div class="container">
+    <h1>Nova - AI Chatbot</h1>
+    <div class="chatbox" id="chatbox">
+      <div class="message">👋 স্বাগত! কিছু জিজ্ঞাসা করুন।</div>
+    </div>
+    <form id="chatForm" class="chat-input-row" autocomplete="off">
+      <input type="text" id="chatInput" placeholder="আপনার বার্তা টাইপ করুন…" required>
+      <button type="submit">পাঠান</button>
+    </form>
+  </div>
     <form id="chatForm" class="chat-input-row" autocomplete="off">
       <input type="text" id="chatInput" placeholder="আপনার বার্তা টাইপ করুন…" required>
       <button type="submit">পাঠান</button>
